--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Flask-Cors==3.0.7
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+numpy==1.16.3
+opencv-python==4.1.0.25
 pyzbar==0.1.8
 six==1.12.0
 virtualenv==16.5.0
